--- a/KrysiaBartek2024/analyses/tarnow_13_10_24.tex
+++ b/KrysiaBartek2024/analyses/tarnow_13_10_24.tex
@@ -3,8 +3,8 @@
 
 \import{../../lib/}{bridge.sty}
 
-\title{Żaczek 30.09.24}
-\author{Krysia \& Bartek}
+\title{GP Tarnów 13.10.2024\\część I}
+\author{Krysia (\& Oliwia)}
 \begin{document}
 \maketitle
 
@@ -38,7 +38,7 @@ Mogę wyciągnąć \xspades 8? Albo  w ogóle \xspades A? Szkoda, że nie pamię
     \end{tabular}
 \end{table}
 
-[KG] Wist \xhearts J. Jak zaimpasuje \xhearts T to ma 13 lew.
+[KG] Wist \xhearts J. Jak rozgr. zaimpasuje \xhearts T to ma 13 lew.
 Nie odważył się, ale czemu wziął tylko +1; na prawdę nie wiem,
 może impasował pika (nie no nie ma jak impasować xd). 
 Tu się nie da nie wziąć +2.
@@ -71,7 +71,7 @@ W 4\hearts mam górne 11. Daje się 4\hearts...?
 
 \textit{Gość zapytał przed wistem czy wszystkie bidy naturalne, a Oliwia, że tak XD}
 
-Ale w sumie mogłam 3\hearts zamiast 3\diams. Przedłużam kiery i widać, że się boję o trzymanie.
+Ale w sumie mogłam 3\hearts zamiast 3\diams. Przedłużam kiery i widać, że się boję o trzymanie \diams.
 A Oliwia z renonsem i bez trzymania da [cośtam], to zagramy w te kiery.
 
 \pagebreak
@@ -98,13 +98,13 @@ A i byłam
 z siebie dumna ale w sumie pół sali tak wistowało.
 No a kierowy akurat nie wypuszcza.
 Po ściągnięciu kar wzięłam \xspades A,
-do którego gośc wyrzucił króla. Wyszłam w kiera.
+do którego gość wyrzucił króla. Wyszłam w kiera.
 Zebrał piki, ale już nie miał powrotu na stół.
 I tak powinien być -1. Chyba do jednego z kar wywalił pika.
 No niezbyt to przemyślał.
 
 \pagebreak
-\section*{Rozdanie 5} % 
+\section*{Rozdanie 5}
 \handdiagramv{\vhand{AT3}{9}{AQJ953}{KT8}}
 {\vhand{KQ864}{65}{T4}{Q763}}
 {\vhand{95}{AKJ832}{K86}{A2}}
@@ -132,7 +132,7 @@ nie wchodziła -- gość mógłby, wiedząc, że nie mam już pików,
 oddać mi bezpiecznie kiera i wziąć wszystkie pozostałe lewy.
 Oliwka też raczej małego pika wyrzuciła, więc myślę, że i tak
 mógł założyć, że wist nie poszedł z \xspades F64 i zaimpasować to serduszko.
-I ogóle wydaje mi się, że wist był królem, a ja potem wyrzuciłam wałka na karo.
+W ogóle wydaje mi się, że wist był królem, a ja potem wyrzuciłam wałka na karo.
 Ale może nie.
 
 \vul{N} tłumaczył się, że nie chciał dać cue z singla.
@@ -246,7 +246,7 @@ zrobił, żeby być -1.
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
+        \vul{W} (K) & \nvul{N} & \vul{E} (O) & \nvul{S}\\
         -- & \pass & 1\diams & \pass \\
         1\spades & \pass & 4\spades & all \pass \\
     \end{tabular}
@@ -286,23 +286,23 @@ Ale jak figury kier są na odwrót -- w ten sposób stracę lewę.
 
 \pagebreak
 \section*{Rozdanie 11}
-\handdiagramv{\vhand{KJ83}{A4}{KJ84}{983}}
-{\vhand{42}{KJT83}{976}{Q75}}
-{\vhand{A96}{Q76}{T532}{642}}
-{\vhand{QT75}{952}{AQ}{AKJT}}
+\handdiagramv{\vhand{53}{A86}{AQ9876}{K9}}
+{\vhand{QT876}{942}{J}{A543}}
+{\vhand{A4}{QJT53}{T32}{JT2}}
+{\vhand{KJ92}{K7}{K54}{Q876}}
 {}
 
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
+        \nvul{W} (K) & \nvul{N} & \nvul{E} (O) & \nvul{S}\\
         -- & -- & -- & \pass \\
         1\clubs & 1\diams & 1\spades & 2\hearts \\
         2\spades & 4\hearts & 4\spades & all \pass \\
     \end{tabular}
 \end{table}
 
-W sumie dobra obrona, bo w kiery idzie 12, szkoda, 
+[KG] W sumie dobra obrona, bo w kiery idzie 12, szkoda, 
 że prawie nikt na sali nie zagrał. Ale przynajmniej
 nie skontrowali. A jak na 4\hearts zawistuję w karo,
 a \nvul{S} zabije asem, to już obkładamy.
@@ -315,15 +315,8 @@ a \nvul{S} zabije asem, to już obkładamy.
 {\vhand{Q64}{K732}{Q43}{J63}}
 {NS}
 
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-
-    \end{tabular}
-\end{table}
-
-O wow, ale zepsułam. Wist 
+3\nt\vul{S}\\
+Wist 4\diams, poimpasował, wziął +3.
 
 \pagebreak
 \section*{Rozdanie 13}
@@ -337,25 +330,41 @@ O wow, ale zepsułam. Wist
     \centering
     \begin{tabular}{cccc}
         \vul{W} (K) & \vul{N} & \vul{E} (O) & \vul{S}\\
-
+        -- & 2\diams & 3\clubs & 4\clubs \\
+        \pass & 4\diams & \dbl & 4\hearts \\
+        5\hearts & \dbl & \pass & \pass \\
+        6\clubs & all \pass & & \\
     \end{tabular}
 \end{table}
 
-\pagebreak
-\section*{Rozdanie 14}
-\handdiagramv{\vhand{74}{976}{A9832}{963}}
-{\vhand{QJ8}{QT54}{75}{AQ42}}
-{\vhand{AKT953}{832}{KQJ6}{}}
-{\vhand{62}{AKJ}{T4}{KJT875}}
-{}
+[KG] Bardzo chciałam pokazać moją potężną rękę.
+Bałam się, że 4\nt kompletnie nie zostanie zrozumiane
+i sobie je zagram (albo zagram 6\diams). 
+Oliwia mogła też nie wiedzieć jaki jest kolor przeciwnika.
+Dlatego ostatecznie spasowałam, co dało przeciwnikom szansę na
+informację, jaki mają kolor. Na szczęście jakimś cudem
+nie poszli w obronę. Oliwka tym razem dała \dbl\ na \diams
+jako długość, ja zrozumiałam, że siła. Wg mnie mogła dać 4\nt.
+Albo w ogóle od razu 4\nt. Dałam 5\hearts i na szczęście \vul{N}
+skontrował, co dało mi dodatkowe kółko, żeby w końcu pokazać fit.
+Miałam nadzieję, że pokazałam siłę i fit (chciałam
+zainwitować szlema), ale nie zostałam zrozumiana.
+Na dodatek wist poszedł ze złej ręki 
+i ja rozgrywałam. Wist \xhearts K przejęty asem,
+błyskawiczne wyjście małym pikiem (miał pół godziny na namysł
+jak Oliwia kminiła co zrobić z wistem ze złej ręki).
+Byłam 100\% pewna, że mogę zaimpasować. ale uznałam,
+że dam sobie więcej szans niż moja niezawodna intuicja.
+Zabiłam asem, zebrałam \xclubs A. Niestety nie 1-1.
+Zebrałam drugiego \clubs planując przebijać w obu rękach,
+a jeśli \xdiams K nie spadnie, zaimpasować go u \vul{S}.
+Podczas przebijania już wiedziałam, że się uda,
+\vul{N} pokazał 2 piki, 2 trefle, ma maksymalnie 3 kara -- król
+spada albo jest u \vul{S}.
 
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
+\vspace{0.5cm}
 
-    \end{tabular}
-\end{table}
+\textbf{14}-stego nie zagraliśmy.
 
 \pagebreak
 \section*{Rozdanie 15}
@@ -368,10 +377,20 @@ O wow, ale zepsułam. Wist
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-
+        \nvul{W} (K) & \vul{N} & \nvul{E} (O) & \vul{S}\\
+        -- & -- & -- & 1\diams \\
+        \pass & 1\nt & \dbl & \rdbl \\
+        \pass & \pass & 2\hearts & \pass \\
+        \pass & 3\diams & \pass & 3\nt \\
+        all \pass & & & \\
     \end{tabular}
 \end{table}
+
+Coś im ewidentnie nie wyszło, bo bilansu to nie mają,
+a gość sobie wrzucił 3\nt z singlem. Wist \xhearts Q,
+dorzuciłam markę na 9. Wziął królem wyszedł w pika.
+Oliwia wskoczyła i wyszła małym kierem, a ja wzięłam na 9.
+Wzięłyśmy 4 kiery i 2 asy.
 
 \pagebreak
 \section*{Rozdanie 16}
@@ -384,42 +403,48 @@ O wow, ale zepsułam. Wist
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-
+        \vul{W} (K) & \nvul{N} & \vul{E} (O) & \nvul{S}\\
+        \pass & 1\clubs & \pass & 1\hearts \\
+        \pass & 2\clubs & \pass & \alrts{2\diams} \\
+        \pass & 3\diams & \pass & 4\clubs \\
+        \pass & 4\diams & \pass & 4\nt \\
+        \pass & 5\spades & \pass & 6\clubs \\
     \end{tabular}
 \end{table}
+
+No to sobie wymyślił kontrakt na maxy. 6\clubs na 7-atucie,
+jako jedyni na sali. Też bym nie zawistowała w karo; wzięli +1.
+Wist w atut. Ten kontrakt jest jakiś tragiczny xd
 
 \pagebreak
 \section*{Rozdanie 17}
-\handdiagramv{\vhand{543}{J6}{KQT}{AKQJ9}}
-{\vhand{QT86}{974}{9654}{63}}
-{\vhand{AK97}{AKT852}{3}{T4}}
-{\vhand{J2}{Q3}{AJ872}{8752}}
-{}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 18}
 \handdiagramv{\vhand{A972}{T965}{62}{AKQ}}
 {\vhand{863}{Q7}{K93}{J9873}}
 {\vhand{QJ4}{AK4}{AJ74}{542}}
 {\vhand{KT5}{J832}{QT85}{T6}}
+{}
+
+Jakieś płaskie 3\nt. Oliwia zawistowała \xclubs 9 (?).
+
+\pagebreak
+\section*{Rozdanie 18}
+\handdiagramv{\vhand{T9643}{A843}{T53}{4}}
+{\vhand{K7}{KQ97}{94}{AKQ98}}
+{\vhand{Q2}{JT652}{AKQ7}{J3}}
+{\vhand{AJ85}{}{J862}{T7652}}
 {NS}
 
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-
+        \nvul{W} (K) & \vul{N} & \nvul{E} (O) & \vul{S}\\
+        -- & -- & 1\clubs & 1\hearts \\
+        1\spades & 3\hearts & 3\nt & all \pass \\
     \end{tabular}
 \end{table}
+
+Oliwia spodziewała się trochę więcej, ale na szczęście szło.
+Wist \xdiams Q, \xhearts J.
 
 \pagebreak
 \section*{Rozdanie 19}
@@ -429,13 +454,19 @@ O wow, ale zepsułam. Wist
 {\vhand{654}{AQJ85}{K97}{T9}}
 {EW}
 
+
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-
+        \vul{W} (O) & \nvul{N} & \vul{E} (K) & \nvul{S}\\
+        -- & -- & -- & 1\nt \\
+        all \pass & & & \\
     \end{tabular}
 \end{table}
+
+Wist w pika, a potem to ja nie wiem co się stało,
+ale w kiera wyszła dopiero Oliwia w 3 lewie przed końcem,
+a w karo żadna z nas xd
 
 \pagebreak
 \section*{Rozdanie 20}
@@ -448,10 +479,16 @@ O wow, ale zepsułam. Wist
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} (K) & \vul{N} & \vul{E} (O) & \vul{S}\\
-
+        \vul{W} (O) & \vul{N} & \vul{E} (K) & \vul{S}\\
+        \pass & \pass & 1\nt & \pass \\
+        \pass & \dbl & \pass & 2\hearts \\
+        \dbl & all \pass & & \\
     \end{tabular}
 \end{table}
+
+Kontra wznówkowa i może powinnam unikać gry w obronie
+po poprzednim rozdaniu, ale pas wyglądał lepiej.
+Wist \xspades 9, w sumie nie wiem co się działo.
 
 \pagebreak
 \section*{Rozdanie 21}
@@ -464,10 +501,24 @@ O wow, ale zepsułam. Wist
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-
+        \nvul{W} & \vul{N} (O) & \nvul{E} & \vul{S} (K) \\
+        -- & \pass & \pass & 1\nt \\
+        \dbl & 3\nt & \pass & \pass \\
+        \dbl & \pass & \pass & 4\clubs \\
+        \dbl & all \pass \\
     \end{tabular}
 \end{table}
+
+No nie mogłam się powstrzymać mimo założeń xd\\
+Przy naszym stoliku sędzia powinien być 2x,
+najpierw \nvul{W} skomentował tłumaczenie partnera
+(że pała = 54), że może mieć też objaśniak,
+potem przed wistem powiedział, że blef to nie w tych założeniach.
+Było -2, ale w sumie niewiele brakowało do -1.
+Jakby zamienić \xdiams Q z \xdiams K. Ale trzeba przyznać,
+że 10-kart wygrałam. Kusiło mnie też otwarcie 1\spades,
+ale bałam się, że zagrają dobre na maxy 3\nt zamiast 4\spades.
+Akurat 3\nt im nie szło. Może by się dobrze skończyło.
 
 \pagebreak
 \section*{Rozdanie 22}
@@ -480,10 +531,15 @@ O wow, ale zepsułam. Wist
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-
+        \vul{W} & \nvul{N} (O) & \vul{E} & \nvul{S} (K) \\
+        -- & -- & \pass & 3\spades \\
+        3\nt & 4\spades & \pass & \pass \\
+        \dbl & all \pass & & \\
     \end{tabular}
 \end{table}
+
+Tym razem dobre założenia na blok, gorsze na wyniesienie...
+No cóż.
 
 \pagebreak
 \section*{Rozdanie 23}
@@ -496,10 +552,20 @@ O wow, ale zepsułam. Wist
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} (K) & \vul{N} & \vul{E} (O) & \vul{S}\\
-
+        \vul{W} & \vul{N} (O) & \vul{E} & \vul{S} (K) \\
+        -- & -- & -- & \pass \\
+        \pass & 1\diams & \pass & 1\spades \\
+        all \pass & & & \\
     \end{tabular}
 \end{table}
+
+Bardzo się ucieszyłam z otwarcia i już widziałam się w końcówce.
+Zdziwiłam się na pas i brak wznówki (w sumie \vul{E} ma dobrą wznówkę?).
+Wist \xclubs 9 (czemu oni wistują 9 spod waleta?), wzięty w stole.
+Tak jak uczył mistrz Bartłomiej, zagrałam szybko wałka do singlowego króla,
+który wziął (no w końcu coś poszło zgodnie z planem).
+Następnie ściągnęłam 2 kara i \xclubs A, przebiłam 3 kiery i 2 trefle,
+wszystko się jakimś cudem podzieliło. Na koniec jeszcze \xspades A; 11 lew.
 
 \pagebreak
 \section*{Rozdanie 24}
@@ -512,10 +578,17 @@ O wow, ale zepsułam. Wist
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-
+        \nvul{W} & \nvul{N} (O) & \nvul{E} & \nvul{S} (K) \\
+        1\spades & \pass & \pass & \dbl \\
+        \pass & 2\hearts & \pass & \pass \\
+        2\spades & all \pass & & \\
     \end{tabular}
 \end{table}
+
+Ktoś tu bardzo chciał rozgrywać. Chociaż
+pas na \nvul{E} chyba jeszcze dziwniejszy. 
+Wziął -1, tyle się należało.
+Udało nam się nie rozwiązać kar.
 
 \pagebreak
 \section*{Rozdanie 25}
@@ -529,408 +602,422 @@ O wow, ale zepsułam. Wist
     \centering
     \begin{tabular}{cccc}
         \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-
+        -- & \pass & 1\spades & \pass \\
+        \pass & 2\nt & \dbl & \rdbl \\
+        \pass & 3\diams & \dbl & 4\clubs \\
+        \pass & \pass & \dbl & all \pass \\
     \end{tabular}
 \end{table}
 
-\pagebreak
-\section*{Rozdanie 26}
-\handdiagramv{\vhand{KT75}{A954}{852}{T2}}
-{\vhand{AJ86}{QT2}{JT3}{J74}}
-{\vhand{42}{K87}{AK76}{AK98}}
-{\vhand{Q93}{J63}{Q94}{Q653}}
-{NSEW}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \vul{W} (K) & \vul{N} & \vul{E} (O) & \vul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 27}
-\handdiagramv{\vhand{T83}{KJ7532}{T6}{QT}}
-{\vhand{K52}{86}{A9543}{K32}}
-{\vhand{AJ96}{AQ94}{82}{AJ8}}
-{\vhand{Q74}{T}{KQJ7}{97654}}
-{}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 28}
-\handdiagramv{\vhand{J543}{K97542}{}{K43}}
-{\vhand{Q6}{A}{T8653}{JT862}}
-{\vhand{T2}{QJ63}{AKQJ74}{7}}
-{\vhand{AK987}{T8}{92}{AQ95}}
-{NS}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 29}
-\handdiagramv{\vhand{T3}{A2}{AQJ953}{A73}}
-{\vhand{Q954}{T3}{86}{Q6542}}
-{\vhand{A62}{K874}{K42}{K98}}
-{\vhand{KJ87}{QJ965}{T7}{JT}}
-{NSEW}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \vul{W} (K) & \vul{N} & \vul{E} (O) & \vul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 30}
-\handdiagramv{\vhand{A}{AQJ43}{KT9753}{Q}}
-{\vhand{KQJ964}{962}{J8}{J2}}
-{\vhand{T753}{T5}{A64}{A873}}
-{\vhand{82}{K87}{Q2}{KT9654}}
-{}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 31}
-\handdiagramv{\vhand{Q932}{AT62}{43}{KJ5}}
-{\vhand{AJ}{KJ853}{Q9}{Q843}}
-{\vhand{874}{Q74}{KT852}{A2}}
-{\vhand{KT65}{9}{AJ76}{T976}}
-{NS}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 32}
-\handdiagramv{\vhand{K75}{83}{T5}{KJ7643}}
-{\vhand{AQ93}{KT75}{AKJ7}{8}}
-{\vhand{T6}{QJ42}{6432}{T95}}
-{\vhand{J842}{A96}{Q98}{AQ2}}
-{EW}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 33}
-\handdiagramv{\vhand{QJT9}{T943}{AQ842}{}}
-{\vhand{752}{J5}{J9753}{AQ9}}
-{\vhand{AK84}{AQ76}{K}{JT74}}
-{\vhand{63}{K82}{T6}{K86532}}
-{}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 34}
-\handdiagramv{\vhand{86}{AQ76}{KT85}{Q86}}
-{\vhand{73}{KJ8}{Q64}{97432}}
-{\vhand{KQ94}{T952}{73}{KJ5}}
-{\vhand{AJT52}{43}{AJ92}{AT}}
-{NS}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 35}
-\handdiagramv{\vhand{954}{KQJT}{T4}{T654}}
-{\vhand{T6}{A85}{AK972}{A72}}
-{\vhand{K873}{7642}{85}{J93}}
-{\vhand{AQJ2}{93}{QJ63}{KQ8}}
-{EW}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 36}
-\handdiagramv{\vhand{95}{KJ982}{KJ6}{543}}
-{\vhand{J643}{3}{9543}{AQT8}}
-{\vhand{KQT872}{AT74}{2}{K6}}
-{\vhand{A}{Q65}{AQT87}{J972}}
-{NSEW}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \vul{W} (K) & \vul{N} & \vul{E} (O) & \vul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 37}
-\handdiagramv{\vhand{QJT72}{86}{AT72}{T9}}
-{\vhand{K6543}{J2}{J93}{653}}
-{\vhand{A9}{AKQ5}{K6}{AKQ74}}
-{\vhand{8}{T9743}{Q854}{J82}}
-{NS}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 38}
-\handdiagramv{\vhand{KJ94}{T7432}{5}{AQJ}}
-{\vhand{T63}{AKJ}{A832}{T63}}
-{\vhand{752}{}{QJ64}{K97542}}
-{\vhand{AQ8}{Q9865}{KT97}{8}}
-{EW}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 39}
-\handdiagramv{\vhand{T543}{AKQ74}{K}{KQ4}}
-{\vhand{KQJ96}{T32}{AT8}{32}}
-{\vhand{872}{5}{QJ9543}{J76}}
-{\vhand{A}{J986}{762}{AT985}}
-{NSEW}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \vul{W} (K) & \vul{N} & \vul{E} (O) & \vul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 40}
-\handdiagramv{\vhand{K83}{K965}{JT}{AJ83}}
-{\vhand{AQ762}{AQT}{A3}{976}}
-{\vhand{95}{J7432}{652}{K52}}
-{\vhand{JT4}{8}{KQ9874}{QT4}}
-{}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 41}
-\handdiagramv{\vhand{K83}{K965}{JT}{AJ83}}
-{\vhand{AQT4}{J2}{53}{AT632}}
-{\vhand{K5}{K87643}{Q}{KJ98}}
-{\vhand{832}{A9}{AKJ864}{Q5}}
-{EW}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 42}
-\handdiagramv{\vhand{Q6}{76}{9862}{AJT42}}
-{\vhand{KT83}{9832}{4}{9765}}
-{\vhand{AJ974}{JT4}{T73}{Q8}}
-{\vhand{52}{AKQ5}{AKQJ5}{K3}}
-{NSEW}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \vul{W} (K) & \vul{N} & \vul{E} (O) & \vul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 43}
-\handdiagramv{\vhand{AK42}{62}{K865}{AT6}}
-{\vhand{Q97}{AKQT3}{AT97}{4}}
-{\vhand{T653}{J7}{QJ432}{82}}
-{\vhand{J8}{9854}{}{KQJ9753}}
-{}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 44}
-\handdiagramv{\vhand{K64}{K52}{T6}{JT984}}
-{\vhand{T982}{QJ873}{53}{73}}
-{\vhand{AQ753}{A9}{J72}{Q52}}
-{\vhand{J}{T64}{AKQ984}{AK6}}
-{NS}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 45}
-\handdiagramv{\vhand{8752}{764}{QJ}{AJT3}}
-{\vhand{QT93}{98532}{AK6}{5}}
-{\vhand{AJ}{AKJ}{9743}{K964}}
-{\vhand{K64}{QT}{T852}{Q872}}
-{NSEW}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \vul{W} (K) & \vul{N} & \vul{E} (O) & \vul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 46}
-\handdiagramv{\vhand{8752}{764}{QJ}{AJT3}}
-{\vhand{QT93}{98532}{AK6}{5}}
-{\vhand{AJ}{AKJ}{9743}{K964}}
-{\vhand{K64}{QT}{T852}{Q872}}
-{}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 47}
-\handdiagramv{\vhand{8752}{764}{QJ}{AJT3}}
-{\vhand{QT93}{98532}{AK6}{5}}
-{\vhand{AJ}{AKJ}{9743}{K964}}
-{\vhand{K64}{QT}{T852}{Q872}}
-{NS}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 48}
-\handdiagramv{\vhand{J98}{AQ6}{AT97}{T82}}
-{\vhand{AQ42}{852}{632}{K53}}
-{\vhand{KT6}{J4}{J4}{AQJ964}}
-{\vhand{753}{KT973}{KQ85}{7}}
-{EW}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 49}
-\handdiagramv{\vhand{QJT5}{JT864}{5}{AQ3}}
-{\vhand{A983}{93}{Q96}{T942}}
-{\vhand{K2}{AK752}{KT742}{5}}
-{\vhand{764}{Q}{AJ83}{KJ876}}
-{}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 50}
-\handdiagramv{\vhand{AQ}{Q65}{T862}{AK42}}
-{\vhand{KT85}{AJ3}{Q}{QJ865}}
-{\vhand{9763}{942}{J953}{93}}
-{\vhand{J42}{KT87}{AK74}{T7}}
-{NS}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-
-    \end{tabular}
-\end{table}
+Że Oliwka była po pasie to ogarnęłam po rozdaniu.
+No cóż, Slowpoke. Po 3\diams zdecydowałam się
+zaalertować 2\nt. No i kurczę! 3\diams było swoje.
+No ale skąd mogłam wiedzieć. Nie spodziewałam się 5-4.
+A 4\clubs\dbl-1 to minimax, ale nic nie trafiłam.
+A właściwie mogłam. Widać było, że \vul{E} ma kara,
+a trefle już dla zasady pałuje. 2 piki i kier na wiście,
+w czwartej lewie \vul{E} wyszedł \xdiams A, \diams. Zabiłam,
+bo uznałam, że \vul{W} jakaś babcia się mieści i bałam się przebitki.
+Potem nie trafiłam też trefli: -2.
+
+% \pagebreak
+% \section*{Rozdanie 26}
+% \handdiagramv{\vhand{KT75}{A954}{852}{T2}}
+% {\vhand{AJ86}{QT2}{JT3}{J74}}
+% {\vhand{42}{K87}{AK76}{AK98}}
+% {\vhand{Q93}{J63}{Q94}{Q653}}
+% {NSEW}
+
+% \begin{table}[h!]
+%     \centering
+%     \begin{tabular}{cccc}
+%         \vul{W} (K) & \vul{N} & \vul{E} (O) & \vul{S}\\
+
+%     \end{tabular}
+% \end{table}
+
+% \pagebreak
+% \section*{Rozdanie 27}
+% \handdiagramv{\vhand{T83}{KJ7532}{T6}{QT}}
+% {\vhand{K52}{86}{A9543}{K32}}
+% {\vhand{AJ96}{AQ94}{82}{AJ8}}
+% {\vhand{Q74}{T}{KQJ7}{97654}}
+% {}
+
+% \begin{table}[h!]
+%     \centering
+%     \begin{tabular}{cccc}
+%         \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
+
+%     \end{tabular}
+% \end{table}
+
+% \pagebreak
+% \section*{Rozdanie 28}
+% \handdiagramv{\vhand{J543}{K97542}{}{K43}}
+% {\vhand{Q6}{A}{T8653}{JT862}}
+% {\vhand{T2}{QJ63}{AKQJ74}{7}}
+% {\vhand{AK987}{T8}{92}{AQ95}}
+% {NS}
+
+% \begin{table}[h!]
+%     \centering
+%     \begin{tabular}{cccc}
+%         \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
+
+%     \end{tabular}
+% \end{table}
+
+% \pagebreak
+% \section*{Rozdanie 29}
+% \handdiagramv{\vhand{T3}{A2}{AQJ953}{A73}}
+% {\vhand{Q954}{T3}{86}{Q6542}}
+% {\vhand{A62}{K874}{K42}{K98}}
+% {\vhand{KJ87}{QJ965}{T7}{JT}}
+% {NSEW}
+
+% \begin{table}[h!]
+%     \centering
+%     \begin{tabular}{cccc}
+%         \vul{W} (K) & \vul{N} & \vul{E} (O) & \vul{S}\\
+
+%     \end{tabular}
+% \end{table}
+
+% \pagebreak
+% \section*{Rozdanie 30}
+% \handdiagramv{\vhand{A}{AQJ43}{KT9753}{Q}}
+% {\vhand{KQJ964}{962}{J8}{J2}}
+% {\vhand{T753}{T5}{A64}{A873}}
+% {\vhand{82}{K87}{Q2}{KT9654}}
+% {}
+
+% \begin{table}[h!]
+%     \centering
+%     \begin{tabular}{cccc}
+%         \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
+
+%     \end{tabular}
+% \end{table}
+
+% \pagebreak
+% \section*{Rozdanie 31}
+% \handdiagramv{\vhand{Q932}{AT62}{43}{KJ5}}
+% {\vhand{AJ}{KJ853}{Q9}{Q843}}
+% {\vhand{874}{Q74}{KT852}{A2}}
+% {\vhand{KT65}{9}{AJ76}{T976}}
+% {NS}
+
+% \begin{table}[h!]
+%     \centering
+%     \begin{tabular}{cccc}
+%         \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
+
+%     \end{tabular}
+% \end{table}
+
+% \pagebreak
+% \section*{Rozdanie 32}
+% \handdiagramv{\vhand{K75}{83}{T5}{KJ7643}}
+% {\vhand{AQ93}{KT75}{AKJ7}{8}}
+% {\vhand{T6}{QJ42}{6432}{T95}}
+% {\vhand{J842}{A96}{Q98}{AQ2}}
+% {EW}
+
+% \begin{table}[h!]
+%     \centering
+%     \begin{tabular}{cccc}
+%         \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
+
+%     \end{tabular}
+% \end{table}
+
+% \pagebreak
+% \section*{Rozdanie 33}
+% \handdiagramv{\vhand{QJT9}{T943}{AQ842}{}}
+% {\vhand{752}{J5}{J9753}{AQ9}}
+% {\vhand{AK84}{AQ76}{K}{JT74}}
+% {\vhand{63}{K82}{T6}{K86532}}
+% {}
+
+% \begin{table}[h!]
+%     \centering
+%     \begin{tabular}{cccc}
+%         \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
+
+%     \end{tabular}
+% \end{table}
+
+% \pagebreak
+% \section*{Rozdanie 34}
+% \handdiagramv{\vhand{86}{AQ76}{KT85}{Q86}}
+% {\vhand{73}{KJ8}{Q64}{97432}}
+% {\vhand{KQ94}{T952}{73}{KJ5}}
+% {\vhand{AJT52}{43}{AJ92}{AT}}
+% {NS}
+
+% \begin{table}[h!]
+%     \centering
+%     \begin{tabular}{cccc}
+%         \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
+
+%     \end{tabular}
+% \end{table}
+
+% \pagebreak
+% \section*{Rozdanie 35}
+% \handdiagramv{\vhand{954}{KQJT}{T4}{T654}}
+% {\vhand{T6}{A85}{AK972}{A72}}
+% {\vhand{K873}{7642}{85}{J93}}
+% {\vhand{AQJ2}{93}{QJ63}{KQ8}}
+% {EW}
+
+% \begin{table}[h!]
+%     \centering
+%     \begin{tabular}{cccc}
+%         \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
+
+%     \end{tabular}
+% \end{table}
+
+% \pagebreak
+% \section*{Rozdanie 36}
+% \handdiagramv{\vhand{95}{KJ982}{KJ6}{543}}
+% {\vhand{J643}{3}{9543}{AQT8}}
+% {\vhand{KQT872}{AT74}{2}{K6}}
+% {\vhand{A}{Q65}{AQT87}{J972}}
+% {NSEW}
+
+% \begin{table}[h!]
+%     \centering
+%     \begin{tabular}{cccc}
+%         \vul{W} (K) & \vul{N} & \vul{E} (O) & \vul{S}\\
+
+%     \end{tabular}
+% \end{table}
+
+% \pagebreak
+% \section*{Rozdanie 37}
+% \handdiagramv{\vhand{QJT72}{86}{AT72}{T9}}
+% {\vhand{K6543}{J2}{J93}{653}}
+% {\vhand{A9}{AKQ5}{K6}{AKQ74}}
+% {\vhand{8}{T9743}{Q854}{J82}}
+% {NS}
+
+% \begin{table}[h!]
+%     \centering
+%     \begin{tabular}{cccc}
+%         \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
+
+%     \end{tabular}
+% \end{table}
+
+% \pagebreak
+% \section*{Rozdanie 38}
+% \handdiagramv{\vhand{KJ94}{T7432}{5}{AQJ}}
+% {\vhand{T63}{AKJ}{A832}{T63}}
+% {\vhand{752}{}{QJ64}{K97542}}
+% {\vhand{AQ8}{Q9865}{KT97}{8}}
+% {EW}
+
+% \begin{table}[h!]
+%     \centering
+%     \begin{tabular}{cccc}
+%         \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
+
+%     \end{tabular}
+% \end{table}
+
+% \pagebreak
+% \section*{Rozdanie 39}
+% \handdiagramv{\vhand{T543}{AKQ74}{K}{KQ4}}
+% {\vhand{KQJ96}{T32}{AT8}{32}}
+% {\vhand{872}{5}{QJ9543}{J76}}
+% {\vhand{A}{J986}{762}{AT985}}
+% {NSEW}
+
+% \begin{table}[h!]
+%     \centering
+%     \begin{tabular}{cccc}
+%         \vul{W} (K) & \vul{N} & \vul{E} (O) & \vul{S}\\
+
+%     \end{tabular}
+% \end{table}
+
+% \pagebreak
+% \section*{Rozdanie 40}
+% \handdiagramv{\vhand{K83}{K965}{JT}{AJ83}}
+% {\vhand{AQ762}{AQT}{A3}{976}}
+% {\vhand{95}{J7432}{652}{K52}}
+% {\vhand{JT4}{8}{KQ9874}{QT4}}
+% {}
+
+% \begin{table}[h!]
+%     \centering
+%     \begin{tabular}{cccc}
+%         \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
+
+%     \end{tabular}
+% \end{table}
+
+% \pagebreak
+% \section*{Rozdanie 41}
+% \handdiagramv{\vhand{K83}{K965}{JT}{AJ83}}
+% {\vhand{AQT4}{J2}{53}{AT632}}
+% {\vhand{K5}{K87643}{Q}{KJ98}}
+% {\vhand{832}{A9}{AKJ864}{Q5}}
+% {EW}
+
+% \begin{table}[h!]
+%     \centering
+%     \begin{tabular}{cccc}
+%         \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
+
+%     \end{tabular}
+% \end{table}
+
+% \pagebreak
+% \section*{Rozdanie 42}
+% \handdiagramv{\vhand{Q6}{76}{9862}{AJT42}}
+% {\vhand{KT83}{9832}{4}{9765}}
+% {\vhand{AJ974}{JT4}{T73}{Q8}}
+% {\vhand{52}{AKQ5}{AKQJ5}{K3}}
+% {NSEW}
+
+% \begin{table}[h!]
+%     \centering
+%     \begin{tabular}{cccc}
+%         \vul{W} (K) & \vul{N} & \vul{E} (O) & \vul{S}\\
+
+%     \end{tabular}
+% \end{table}
+
+% \pagebreak
+% \section*{Rozdanie 43}
+% \handdiagramv{\vhand{AK42}{62}{K865}{AT6}}
+% {\vhand{Q97}{AKQT3}{AT97}{4}}
+% {\vhand{T653}{J7}{QJ432}{82}}
+% {\vhand{J8}{9854}{}{KQJ9753}}
+% {}
+
+% \begin{table}[h!]
+%     \centering
+%     \begin{tabular}{cccc}
+%         \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
+
+%     \end{tabular}
+% \end{table}
+
+% \pagebreak
+% \section*{Rozdanie 44}
+% \handdiagramv{\vhand{K64}{K52}{T6}{JT984}}
+% {\vhand{T982}{QJ873}{53}{73}}
+% {\vhand{AQ753}{A9}{J72}{Q52}}
+% {\vhand{J}{T64}{AKQ984}{AK6}}
+% {NS}
+
+% \begin{table}[h!]
+%     \centering
+%     \begin{tabular}{cccc}
+%         \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
+
+%     \end{tabular}
+% \end{table}
+
+% \pagebreak
+% \section*{Rozdanie 45}
+% \handdiagramv{\vhand{8752}{764}{QJ}{AJT3}}
+% {\vhand{QT93}{98532}{AK6}{5}}
+% {\vhand{AJ}{AKJ}{9743}{K964}}
+% {\vhand{K64}{QT}{T852}{Q872}}
+% {NSEW}
+
+% \begin{table}[h!]
+%     \centering
+%     \begin{tabular}{cccc}
+%         \vul{W} (K) & \vul{N} & \vul{E} (O) & \vul{S}\\
+
+%     \end{tabular}
+% \end{table}
+
+% \pagebreak
+% \section*{Rozdanie 46}
+% \handdiagramv{\vhand{8752}{764}{QJ}{AJT3}}
+% {\vhand{QT93}{98532}{AK6}{5}}
+% {\vhand{AJ}{AKJ}{9743}{K964}}
+% {\vhand{K64}{QT}{T852}{Q872}}
+% {}
+
+% \begin{table}[h!]
+%     \centering
+%     \begin{tabular}{cccc}
+%         \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
+
+%     \end{tabular}
+% \end{table}
+
+% \pagebreak
+% \section*{Rozdanie 47}
+% \handdiagramv{\vhand{8752}{764}{QJ}{AJT3}}
+% {\vhand{QT93}{98532}{AK6}{5}}
+% {\vhand{AJ}{AKJ}{9743}{K964}}
+% {\vhand{K64}{QT}{T852}{Q872}}
+% {NS}
+
+% \begin{table}[h!]
+%     \centering
+%     \begin{tabular}{cccc}
+%         \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
+
+%     \end{tabular}
+% \end{table}
+
+% \pagebreak
+% \section*{Rozdanie 48}
+% \handdiagramv{\vhand{J98}{AQ6}{AT97}{T82}}
+% {\vhand{AQ42}{852}{632}{K53}}
+% {\vhand{KT6}{J4}{J4}{AQJ964}}
+% {\vhand{753}{KT973}{KQ85}{7}}
+% {EW}
+
+% \begin{table}[h!]
+%     \centering
+%     \begin{tabular}{cccc}
+%         \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
+
+%     \end{tabular}
+% \end{table}
+
+% \pagebreak
+% \section*{Rozdanie 49}
+% \handdiagramv{\vhand{QJT5}{JT864}{5}{AQ3}}
+% {\vhand{A983}{93}{Q96}{T942}}
+% {\vhand{K2}{AK752}{KT742}{5}}
+% {\vhand{764}{Q}{AJ83}{KJ876}}
+% {}
+
+% \begin{table}[h!]
+%     \centering
+%     \begin{tabular}{cccc}
+%         \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
+
+%     \end{tabular}
+% \end{table}
+
+% \pagebreak
+% \section*{Rozdanie 50}
+% \handdiagramv{\vhand{AQ}{Q65}{T862}{AK42}}
+% {\vhand{KT85}{AJ3}{Q}{QJ865}}
+% {\vhand{9763}{942}{J953}{93}}
+% {\vhand{J42}{KT87}{AK74}{T7}}
+% {NS}
+
+% \begin{table}[h!]
+%     \centering
+%     \begin{tabular}{cccc}
+%         \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
+
+%     \end{tabular}
+% \end{table}
 
 \end{document}
