--- a/KrysiaBartek2024/analyses/tools/tc-results-parser/test_python.tex
+++ b/KrysiaBartek2024/analyses/tools/tc-results-parser/test_python.tex
@@ -13,795 +13,11 @@
     
     
 \pagebreak
-\section*{Rozdanie 1}
-\handdiagramv{\vhand{976}{KJ92}{K4}{AK93}}
-{\vhand{T543}{A8543}{6}{875}}
-{\vhand{K}{QT}{Q98732}{QT62}}
-{\vhand{AQJ82}{76}{AJT5}{J4}}
-{}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 2}
-\handdiagramv{\vhand{AT854}{92}{AK93}{K8}}
-{\vhand{Q9}{JT53}{QJ4}{AJT2}}
-{\vhand{K763}{AKQ8}{62}{974}}
-{\vhand{J2}{764}{T875}{Q653}}
-{NS}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 3}
-\handdiagramv{\vhand{A954}{96}{KJ86}{642}}
-{\vhand{KQT76}{8}{T42}{AKT3}}
-{\vhand{J2}{K754}{Q9753}{85}}
-{\vhand{83}{AQJT32}{A}{QJ97}}
-{EW}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 4}
-\handdiagramv{\vhand{K9}{K}{T52}{KQJ6532}}
-{\vhand{54}{J96}{QJ74}{T987}}
-{\vhand{QJ8762}{AT87}{86}{A}}
-{\vhand{AT3}{Q5432}{AK93}{4}}
-{NSEW}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 5}
-\handdiagramv{\vhand{AT3}{9}{AQJ953}{KT8}}
-{\vhand{KQ864}{65}{T4}{Q763}}
-{\vhand{95}{AKJ832}{K86}{A2}}
-{\vhand{J72}{QT74}{72}{J954}}
-{NS}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 6}
-\handdiagramv{\vhand{K92}{AT4}{A42}{T753}}
-{\vhand{A874}{K9}{Q3}{AKQJ2}}
-{\vhand{QJ53}{Q87653}{865}{}}
-{\vhand{T6}{J2}{KJT97}{9864}}
-{EW}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 7}
-\handdiagramv{\vhand{A873}{QJT87}{K}{QJ6}}
-{\vhand{KT962}{K92}{3}{T753}}
-{\vhand{Q5}{643}{QT864}{K84}}
-{\vhand{J4}{A5}{AJ9752}{A92}}
-{NSEW}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 8}
-\handdiagramv{\vhand{Q973}{5}{QT92}{AK84}}
-{\vhand{JT}{KT7643}{A87}{63}}
-{\vhand{K862}{AJ8}{4}{QJT92}}
-{\vhand{A54}{Q92}{KJ653}{75}}
-{}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 9}
-\handdiagramv{\vhand{J5}{JT76}{432}{8763}}
-{\vhand{AT86}{K32}{AKQT8}{4}}
-{\vhand{KQ}{Q84}{J65}{JT952}}
-{\vhand{97432}{A95}{97}{AKQ}}
-{EW}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 10}
-\handdiagramv{\vhand{KJ83}{A4}{KJ84}{983}}
-{\vhand{42}{KJT83}{976}{Q75}}
-{\vhand{A96}{Q76}{T532}{642}}
-{\vhand{QT75}{952}{AQ}{AKJT}}
-{NSEW}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 11}
-\handdiagramv{\vhand{KJ83}{A4}{KJ84}{983}}
-{\vhand{42}{KJT83}{976}{Q75}}
-{\vhand{A96}{Q76}{T532}{642}}
-{\vhand{QT75}{952}{AQ}{AKJT}}
-{}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 12}
-\handdiagramv{\vhand{AKJ87}{54}{AKT75}{T}}
-{\vhand{T32}{98}{J862}{K982}}
-{\vhand{95}{AQJT6}{9}{AQ754}}
-{\vhand{Q64}{K732}{Q43}{J63}}
-{NS}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 13}
-\handdiagramv{\vhand{75}{KQT973}{K54}{Q4}}
-{\vhand{4}{6}{QJ763}{AKT952}}
-{\vhand{KJ32}{AJ852}{T982}{}}
-{\vhand{AQT986}{4}{A}{J8763}}
-{NSEW}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 14}
-\handdiagramv{\vhand{74}{976}{A9832}{963}}
-{\vhand{QJ8}{QT54}{75}{AQ42}}
-{\vhand{AKT953}{832}{KQJ6}{}}
-{\vhand{62}{AKJ}{T4}{KJT875}}
-{}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 15}
-\handdiagramv{\vhand{975}{K85}{K863}{K63}}
-{\vhand{AQ}{AQJ42}{54}{AT85}}
-{\vhand{KJ63}{T}{AQJT7}{Q42}}
-{\vhand{T842}{9763}{92}{J97}}
-{NS}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 16}
-\handdiagramv{\vhand{543}{J6}{KQT}{AKQJ9}}
-{\vhand{QT86}{974}{9654}{63}}
-{\vhand{AK97}{AKT852}{3}{T4}}
-{\vhand{J2}{Q3}{AJ872}{8752}}
-{EW}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 17}
-\handdiagramv{\vhand{543}{J6}{KQT}{AKQJ9}}
-{\vhand{QT86}{974}{9654}{63}}
-{\vhand{AK97}{AKT852}{3}{T4}}
-{\vhand{J2}{Q3}{AJ872}{8752}}
-{}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
 \section*{Rozdanie 18}
-\handdiagramv{\vhand{A972}{T965}{62}{AKQ}}
-{\vhand{863}{Q7}{K93}{J9873}}
-{\vhand{QJ4}{AK4}{AJ74}{542}}
-{\vhand{KT5}{J832}{QT85}{T6}}
-{NS}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 19}
-\handdiagramv{\vhand{972}{432}{T53}{J532}}
-{\vhand{JT8}{976}{AQ84}{KQ7}}
-{\vhand{AKQ3}{KT}{J62}{A864}}
-{\vhand{654}{AQJ85}{K97}{T9}}
-{EW}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 20}
-\handdiagramv{\vhand{5432}{AT8}{KQ65}{J3}}
-{\vhand{AK6}{Q932}{A4}{Q754}}
-{\vhand{QJ}{KJ76}{972}{K862}}
-{\vhand{T987}{54}{JT83}{AT9}}
-{NSEW}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 21}
-\handdiagramv{\vhand{K7}{75}{QT85}{AJ854}}
-{\vhand{J85432}{J82}{K76}{T}}
-{\vhand{T6}{Q964}{J2}{Q9762}}
-{\vhand{AQ9}{AKT3}{A943}{K3}}
-{NS}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 22}
-\handdiagramv{\vhand{6542}{987}{AQ}{AQ86}}
-{\vhand{}{Q653}{T8732}{5432}}
-{\vhand{KQT983}{T4}{9654}{7}}
-{\vhand{AJ7}{AKJ2}{KJ}{KJT9}}
-{EW}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 23}
-\handdiagramv{\vhand{A765}{JT54}{KT87}{K}}
-{\vhand{K3}{A876}{J64}{QT42}}
-{\vhand{9842}{K}{A532}{A753}}
-{\vhand{QJT}{Q932}{Q9}{J986}}
-{NSEW}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 24}
-\handdiagramv{\vhand{QT9}{J9652}{K32}{96}}
-{\vhand{3}{83}{J764}{AK8532}}
-{\vhand{7542}{AKT}{AT9}{QT7}}
-{\vhand{AKJ86}{Q74}{Q85}{J4}}
-{}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 25}
-\handdiagramv{\vhand{Q9}{K4}{J9863}{KJ42}}
-{\vhand{AK532}{AT87}{AQ5}{6}}
-{\vhand{74}{QJ3}{KT2}{AT753}}
-{\vhand{JT86}{9652}{74}{Q98}}
-{EW}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 26}
-\handdiagramv{\vhand{KT75}{A954}{852}{T2}}
-{\vhand{AJ86}{QT2}{JT3}{J74}}
-{\vhand{42}{K87}{AK76}{AK98}}
-{\vhand{Q93}{J63}{Q94}{Q653}}
-{NSEW}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 27}
-\handdiagramv{\vhand{T83}{KJ7532}{T6}{QT}}
-{\vhand{K52}{86}{A9543}{K32}}
-{\vhand{AJ96}{AQ94}{82}{AJ8}}
-{\vhand{Q74}{T}{KQJ7}{97654}}
-{}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 28}
-\handdiagramv{\vhand{J543}{K97542}{}{K43}}
-{\vhand{Q6}{A}{T8653}{JT862}}
-{\vhand{T2}{QJ63}{AKQJ74}{7}}
-{\vhand{AK987}{T8}{92}{AQ95}}
-{NS}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 29}
-\handdiagramv{\vhand{T3}{A2}{AQJ953}{A73}}
-{\vhand{Q954}{T3}{86}{Q6542}}
-{\vhand{A62}{K874}{K42}{K98}}
-{\vhand{KJ87}{QJ965}{T7}{JT}}
-{NSEW}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 30}
-\handdiagramv{\vhand{A}{AQJ43}{KT9753}{Q}}
-{\vhand{KQJ964}{962}{J8}{J2}}
-{\vhand{T753}{T5}{A64}{A873}}
-{\vhand{82}{K87}{Q2}{KT9654}}
-{}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 31}
-\handdiagramv{\vhand{Q932}{AT62}{43}{KJ5}}
-{\vhand{AJ}{KJ853}{Q9}{Q843}}
-{\vhand{874}{Q74}{KT852}{A2}}
-{\vhand{KT65}{9}{AJ76}{T976}}
-{NS}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 32}
-\handdiagramv{\vhand{K75}{83}{T5}{KJ7643}}
-{\vhand{AQ93}{KT75}{AKJ7}{8}}
-{\vhand{T6}{QJ42}{6432}{T95}}
-{\vhand{J842}{A96}{Q98}{AQ2}}
-{EW}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 33}
-\handdiagramv{\vhand{QJT9}{T943}{AQ842}{}}
-{\vhand{752}{J5}{J9753}{AQ9}}
-{\vhand{AK84}{AQ76}{K}{JT74}}
-{\vhand{63}{K82}{T6}{K86532}}
-{}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 34}
-\handdiagramv{\vhand{86}{AQ76}{KT85}{Q86}}
-{\vhand{73}{KJ8}{Q64}{97432}}
-{\vhand{KQ94}{T952}{73}{KJ5}}
-{\vhand{AJT52}{43}{AJ92}{AT}}
-{NS}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 35}
-\handdiagramv{\vhand{954}{KQJT}{T4}{T654}}
-{\vhand{T6}{A85}{AK972}{A72}}
-{\vhand{K873}{7642}{85}{J93}}
-{\vhand{AQJ2}{93}{QJ63}{KQ8}}
-{EW}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 36}
-\handdiagramv{\vhand{95}{KJ982}{KJ6}{543}}
-{\vhand{J643}{3}{9543}{AQT8}}
-{\vhand{KQT872}{AT74}{2}{K6}}
-{\vhand{A}{Q65}{AQT87}{J972}}
-{NSEW}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 37}
-\handdiagramv{\vhand{QJT72}{86}{AT72}{T9}}
-{\vhand{K6543}{J2}{J93}{653}}
-{\vhand{A9}{AKQ5}{K6}{AKQ74}}
-{\vhand{8}{T9743}{Q854}{J82}}
-{NS}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 38}
-\handdiagramv{\vhand{KJ94}{T7432}{5}{AQJ}}
-{\vhand{T63}{AKJ}{A832}{T63}}
-{\vhand{752}{}{QJ64}{K97542}}
-{\vhand{AQ8}{Q9865}{KT97}{8}}
-{EW}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 39}
-\handdiagramv{\vhand{T543}{AKQ74}{K}{KQ4}}
-{\vhand{KQJ96}{T32}{AT8}{32}}
-{\vhand{872}{5}{QJ9543}{J76}}
-{\vhand{A}{J986}{762}{AT985}}
-{NSEW}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 40}
-\handdiagramv{\vhand{K83}{K965}{JT}{AJ83}}
-{\vhand{AQ762}{AQT}{A3}{976}}
-{\vhand{95}{J7432}{652}{K52}}
-{\vhand{JT4}{8}{KQ9874}{QT4}}
-{}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 41}
-\handdiagramv{\vhand{K83}{K965}{JT}{AJ83}}
-{\vhand{AQT4}{J2}{53}{AT632}}
-{\vhand{K5}{K87643}{Q}{KJ98}}
-{\vhand{832}{A9}{AKJ864}{Q5}}
-{EW}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 42}
-\handdiagramv{\vhand{Q6}{76}{9862}{AJT42}}
-{\vhand{KT83}{9832}{4}{9765}}
-{\vhand{AJ974}{JT4}{T73}{Q8}}
-{\vhand{52}{AKQ5}{AKQJ5}{K3}}
-{NSEW}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 43}
-\handdiagramv{\vhand{AK42}{62}{K865}{AT6}}
-{\vhand{Q97}{AKQT3}{AT97}{4}}
-{\vhand{T653}{J7}{QJ432}{82}}
-{\vhand{J8}{9854}{}{KQJ9753}}
-{}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 44}
-\handdiagramv{\vhand{K64}{K52}{T6}{JT984}}
-{\vhand{T982}{QJ873}{53}{73}}
-{\vhand{AQ753}{A9}{J72}{Q52}}
-{\vhand{J}{T64}{AKQ984}{AK6}}
-{NS}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 45}
-\handdiagramv{\vhand{8752}{764}{QJ}{AJT3}}
-{\vhand{QT93}{98532}{AK6}{5}}
-{\vhand{AJ}{AKJ}{9743}{K964}}
-{\vhand{K64}{QT}{T852}{Q872}}
-{NSEW}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 46}
-\handdiagramv{\vhand{8752}{764}{QJ}{AJT3}}
-{\vhand{QT93}{98532}{AK6}{5}}
-{\vhand{AJ}{AKJ}{9743}{K964}}
-{\vhand{K64}{QT}{T852}{Q872}}
-{}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 47}
-\handdiagramv{\vhand{8752}{764}{QJ}{AJT3}}
-{\vhand{QT93}{98532}{AK6}{5}}
-{\vhand{AJ}{AKJ}{9743}{K964}}
-{\vhand{K64}{QT}{T852}{Q872}}
-{NS}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 48}
-\handdiagramv{\vhand{J98}{AQ6}{AT97}{T82}}
-{\vhand{AQ42}{852}{632}{K53}}
-{\vhand{KT6}{J4}{J4}{AQJ964}}
-{\vhand{753}{KT973}{KQ85}{7}}
-{EW}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 49}
-\handdiagramv{\vhand{QJT5}{JT864}{5}{AQ3}}
-{\vhand{A983}{93}{Q96}{T942}}
-{\vhand{K2}{AK752}{KT742}{5}}
-{\vhand{764}{Q}{AJ83}{KJ876}}
-{}
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
-
-\pagebreak
-\section*{Rozdanie 50}
-\handdiagramv{\vhand{AQ}{Q65}{T862}{AK42}}
-{\vhand{KT85}{AJ3}{Q}{QJ865}}
-{\vhand{9763}{942}{J953}{93}}
-{\vhand{J42}{KT87}{AK74}{T7}}
+\handdiagramv{\vhand{T9643}{A843}{T53}{4}}
+{\vhand{K7}{KQ97}{94}{AKQ98}}
+{\vhand{Q2}{JT652}{AKQ7}{J3}}
+{\vhand{AJ85}{}{J862}{T7652}}
 {NS}
 
 \begin{table}[h!]
